Migrate to Java 21 with Spring Boot 3.5.16 and Spring Cloud 2025.0.3
Co-Authored-By: diogo.tamura <diogo.tamura@cognition.ai>